--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
         "forms",
         "validation"
     ],
-    "private": true
+    "private": true,
+    "packageManager": "yarn@1.22.22"
 }
