--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "re-formality",
-    "version": "4.0.0-beta.21",
-    "description": "Form validation tool for @rescript/react",
-    "author": "Alex Fedoseev <alex@35mil.me>",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MinimaHQ/re-formality.git"
-    },
-    "workspaces": [
-        "lib",
-        "specs",
-        "examples"
-    ],
-    "keywords": [
-        "react",
-        "rescript-react",
-        "reason",
-        "reason-react",
-        "rescript",
-        "reasonml",
-        "ocaml",
-        "bucklescript",
-        "forms",
-        "validation"
-    ],
-    "private": true,
-    "packageManager": "yarn@1.22.22"
+  "name": "re-formality",
+  "version": "4.0.0-beta.21",
+  "description": "Form validation tool for @rescript/react",
+  "author": "Alex Fedoseev <alex@35mil.me>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MinimaHQ/re-formality.git"
+  },
+  "workspaces": [
+    "lib",
+    "specs",
+    "examples"
+  ],
+  "keywords": [
+    "react",
+    "rescript-react",
+    "reason",
+    "reason-react",
+    "rescript",
+    "reasonml",
+    "ocaml",
+    "bucklescript",
+    "forms",
+    "validation"
+  ],
+  "private": true,
+  "packageManager": "yarn@1.22.22",
+  "resolutions": {
+    "@rescript/core": "1.6.1"
+  }
 }
