--- a/examples/package.json
+++ b/examples/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "vite",
     "prestart": "yarn run clean && yarn run res:build",
-    "build": "parcel build src/index.html",
+    "build": "vite build",
     "prebuild": "yarn run clean && yarn run res:build",
     "clean": "yarn run dist:clean && yarn run res:clean",
     "res:build": "rescript build",
@@ -24,8 +24,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "parcel": "2.8.3",
-    "process": "0.11.10",
-    "rescript": "12.0.0"
+    "rescript": "12.0.0",
+    "vite": "^5.4.11"
   }
 }
