--- a/specs/package.json
+++ b/specs/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "app:start": "parcel app/index.html --port 8085",
-    "res:build": "rescript build -with-deps",
-    "res:watch": "rescript build -with-deps -w",
+    "app:start": "vite",
+    "app:build": "vite build",
+    "res:build": "rescript build",
+    "res:watch": "rescript watch",
     "res:clean": "rescript clean",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
@@ -15,12 +16,13 @@
   "dependencies": {
     "@rescript/react": "0.13.1",
     "cypress": "4.5.0",
-    "parcel": "2.8.3",
-    "process": "0.11.10",
     "re-formality": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rescript": "12.0.0",
     "start-server-and-test": "1.11.0"
+  },
+  "devDependencies": {
+    "vite": "^5.4.11"
   }
 }
