--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
   push:
     tags:
       - "v*"
+    branches:
+      - master
 
 jobs:
   validate:
@@ -70,7 +72,6 @@ jobs:
   build_macos:
     name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    if: startsWith(github.ref, 'refs/tags/v')
     needs:
       - validate
     strategy:
@@ -137,7 +138,6 @@ jobs:
   build_linux:
     name: Build on Linux ${{ matrix.arch }}
     runs-on: ${{ matrix.runner }}
-    if: startsWith(github.ref, 'refs/tags/v')
     needs:
       - validate
     strategy:
@@ -210,7 +210,6 @@ jobs:
   build_windows:
     name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    if: startsWith(github.ref, 'refs/tags/v')
     needs:
       - validate
     strategy:
