--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,14 @@ jobs:
       - validate
     strategy:
       matrix:
-        os: [macos-13, macos-15]
+        runner: [macos-15-intel, macos-15]
+        include:
+          - runner: macos-15-intel
+            arch: x64
+            artifact-name: darwin-x64
+          - runner: macos-15
+            arch: arm64
+            artifact-name: darwin-arm64
         ocaml-version: [4.14.1]
         node-version: [20.x]
 
@@ -98,7 +105,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ steps.print-yarn-cache.outputs.yarn-cache }}
-          key: ${{ matrix.os }}-yarn-${{ hashFiles('yarn.lock', '*/yarn.lock') }}
+          key: ${{ matrix.artifact-name }}-yarn-${{ hashFiles('yarn.lock', '*/yarn.lock') }}
 
       - name: Install Yarn deps
         run: yarn install
@@ -132,7 +139,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}
+          name: ${{ matrix.artifact-name }}
           path: _build/default/ppx/bin/bin.exe
 
   build_linux:
@@ -142,6 +149,7 @@ jobs:
       - validate
     strategy:
       matrix:
+        runner: [ubuntu-22.04, ubuntu-22.04-arm]
         include:
           - runner: ubuntu-22.04
             arch: x64
@@ -170,7 +178,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ steps.print-yarn-cache.outputs.yarn-cache }}
-          key: linux-${{ matrix.arch }}-yarn-${{ hashFiles('yarn.lock', '*/yarn.lock') }}
+          key: ${{ matrix.artifact-name }}-yarn-${{ hashFiles('yarn.lock', '*/yarn.lock') }}
 
       - name: Install Yarn deps
         run: yarn install
@@ -287,14 +295,14 @@ jobs:
       - build_linux
       - build_windows
     name: Prepare release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node ${{ matrix.node-version }}
+      - name: Setup Node 20.x
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
@@ -302,13 +310,13 @@ jobs:
       - name: Download macOS x86 artifacts
         uses: actions/download-artifact@v4
         with:
-          name: macos-13
-          path: _bin/darwin/intel
+          name: darwin-x64
+          path: _bin/darwin/x64
 
       - name: Download macOS ARM artifacts
         uses: actions/download-artifact@v4
         with:
-          name: macos-15
+          name: darwin-arm64
           path: _bin/darwin/arm
 
       - name: Download Linux x64 artifacts
@@ -332,7 +340,7 @@ jobs:
       - name: Move artifacts
         run: |
           mkdir -p _release/bin
-          mv _bin/darwin/intel/bin.exe _release/bin/re-formality-ppx-darwin-x64.exe
+          mv _bin/darwin/x64/bin.exe _release/bin/re-formality-ppx-darwin-x64.exe
           mv _bin/darwin/arm/bin.exe _release/bin/re-formality-ppx-darwin-arm64.exe
           mv _bin/linux/x64/bin.exe _release/bin/re-formality-ppx-linux-x64.exe
           mv _bin/linux/arm64/bin.exe _release/bin/re-formality-ppx-linux-arm64.exe
