--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -264,11 +264,11 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-version }}
 
-      - name: Pin Opam deps
-        run: |
-          opam pin add dune https://github.com/ocaml/dune.git#1e54fd3 # 3.20.2
-          opam pin add ppxlib https://github.com/ocaml-ppx/ppxlib.git#e027461 # 0.28.0
-          opam pin add alcotest https://github.com/mirage/alcotest.git#927088f # 1.7.0
+      # - name: Pin Opam deps
+      #   run: |
+      #     opam pin add dune https://github.com/ocaml/dune.git#1e54fd3 # 3.20.2
+      #     opam pin add ppxlib https://github.com/ocaml-ppx/ppxlib.git#e027461 # 0.28.0
+      #     opam pin add alcotest https://github.com/mirage/alcotest.git#927088f # 1.7.0
 
       - name: Install Opam deps
         run: opam install . --deps-only --with-test
