--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,10 +274,28 @@ jobs:
         run: opam install . --deps-only --with-test
 
       - name: Build PPX
-        run: opam exec -- dune build
+        run: opam exec -- dune build --verbose
 
       - name: Apply Windows path patch for examples/rescript.json
         run: git apply windows-examples.patch
+
+      - name: Debug - Show directory structure
+        run: |
+          echo "=== Current directory ==="
+          pwd
+          echo ""
+          echo "=== Root directory contents ==="
+          dir
+          echo ""
+          echo "=== _build directory structure ==="
+          dir _build /s /b
+          echo ""
+          echo "=== examples directory contents ==="
+          dir examples
+          echo ""
+          echo "=== examples/rescript.json contents ==="
+          type examples\rescript.json
+        shell: cmd
 
       - name: Build ReScript lib
         run: |
